项目名称修改

--- a/dkgj-admin/src/main/resources/templates/modules/sys/apploan.html
+++ b/dkgj-admin/src/main/resources/templates/modules/sys/apploan.html
@@ -205,7 +205,7 @@
         </div>
 
         <div class="form-group">
-            <div class="col-sm-2 control-label">LDQ后台系统地址</div>
+            <div class="col-sm-2 control-label">易财钱包后台系统地址</div>
             <div class="col-sm-10" style="padding-left:14px;">
                 <input type="text" class="form-control" v-model="loan.managelink" placeholder=""/>
             </div>
