--- a/dkgj-admin/src/main/resources/templates/index1.html
+++ b/dkgj-admin/src/main/resources/templates/index1.html
@@ -20,7 +20,7 @@
 		<div class="layui-main">
 		    <!-- logo区域 -->
 			<div class="admin-logo-box">
-				<a class="logo" href="javascript:;">易财钱包后台系统</a>
+				<a class="logo" href="javascript:;"><nobr>易财钱包后台系统</nobr></a>
 				<div class="larry-side-menu">
 					<i class="fa fa-bars" aria-hidden="true"></i>
 				</div>
